--- a/styles.css
+++ b/styles.css
@@ -301,3 +301,75 @@
   font-size: 14px;
   color: black;
 }
+#background-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  z-index: 999; /* Make sure it sits below the game-mode overlay */
+}
+
+#game-mode-overlay {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #f0f0f0;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  z-index: 1000;
+}
+
+#game-mode-overlay h2 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #333;
+}
+
+.player-selection {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+
+.player-option {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label {
+  margin-bottom: 5px;
+  font-size: 18px;
+  color: #333;
+}
+
+select {
+  padding: 5px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+button#start-game {
+  padding: 10px 20px;
+  font-size: 18px;
+  color: white;
+  background-color: #107cb5;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button#start-game:hover {
+  background-color: #0b5780;
+}
+/* HIDING THE COORDINATES*/
+
+.square{
+  color:transparent;
+}
